build: handle OutputPath to share more of .csproj's between OSes
- From a recent change to make both Linux and Windows use the same
.csproj files, separate PropertyGroup sections were added with
Platform of AnyCPU for Linux. But it can be simpler if we handle the
OutputPath.
- Remove separate PropertyGroup sections for an AnyCPU configuration.
- Specify x64 as the Platform on Linux (Makefile.in). Note that Linux
FieldWorks is only shipped as 64b.
- The .csproj files used in Windows define OutputPath using
SolutionDir. One easy way to unify the OSes usage of the .csproj files
is to just set SolutionDir for Linux/mono. (Makefile.in).
- Update the output directory in other places on Linux from
output/Configuration to output/x64/Configuration (Makefile.in files,
EC.proj).
- RunTests.exe isn't build to the same output directory because we
don't need to ship it.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,5 +73,6 @@ jobs:
         . environ
         export EC_COMMON_APPLICATION_DATA_PATH="$(pwd)/ec-common"
         export MONO_REGISTRY_PATH="${EC_COMMON_APPLICATION_DATA_PATH}/registry"
+        cp -a src/RunTests/bin/x64/${{matrix.build_configuration}}/RunTests.exe output/x64/${{matrix.build_configuration}}/
         # Note that currently, many tests fail and it doesn't fail this build step.
-        mono output/${{matrix.build_configuration}}/RunTests.exe
+        mono output/x64/${{matrix.build_configuration}}/RunTests.exe
