--- a/src/PyScriptEC/Makefile.in
+++ b/src/PyScriptEC/Makefile.in
@@ -16,9 +16,9 @@ exec_prefix = @exec_prefix@
 ROOTDIR     = @abs_top_srcdir@
 TOPDIR      = @top_srcdir@
 BUILDDIR    = $(ROOTDIR)/build/Obj
-OUTDIR      = $(ROOTDIR)/output/Debug
+OUTDIR      = $(ROOTDIR)/output/x64/Debug
 RELEASEBLD  = $(ROOTDIR)/build/Obj/Release
-RELEASEOUT  = $(ROOTDIR)/output/Release
+RELEASEOUT  = $(ROOTDIR)/output/x64/Release
 PYTHON_LDFLAGS =@PYTHON_LDFLAGS@
 PYTHON_CPPFLAGS=@PYTHON_CPPFLAGS@
 ECHEADERDIR=../EncCnvtrs/lib
