--- a/src/ECDriver/linux/Makefile.in
+++ b/src/ECDriver/linux/Makefile.in
@@ -18,9 +18,9 @@ exec_prefix = @exec_prefix@
 ROOTDIR     = @abs_top_srcdir@
 TOPDIR      = @top_srcdir@
 BUILDDIR    = $(ROOTDIR)/build/Obj
-OUTDIR      = $(ROOTDIR)/output/Debug
+OUTDIR      = $(ROOTDIR)/output/x64/Debug
 RELEASEBLD  = $(ROOTDIR)/build/Obj/Release
-RELEASEOUT  = $(ROOTDIR)/output/Release
+RELEASEOUT  = $(ROOTDIR)/output/x64/Release
 ifeq ($(strip $(FIELDWORKS)),)
 LIBDIR      = @libdir@/encConverters
 REGROOT     = /var/lib/encConverters
