--- a/src/IcuEC/Makefile.in
+++ b/src/IcuEC/Makefile.in
@@ -17,9 +17,9 @@ exec_prefix = @exec_prefix@
 ROOTDIR     = @abs_top_srcdir@
 TOPDIR      = @top_srcdir@
 BUILDDIR    = $(ROOTDIR)/build/Obj
-OUTDIR      = $(ROOTDIR)/output/Debug
+OUTDIR      = $(ROOTDIR)/output/x64/Debug
 RELEASEBLD  = $(ROOTDIR)/build/Obj/Release
-RELEASEOUT  = $(ROOTDIR)/output/Release
+RELEASEOUT  = $(ROOTDIR)/output/x64/Release
 ECHEADERDIR=../EncCnvtrs/lib
 ECHEADER=$(ECHEADERDIR)/CEncConverter.h
 ifeq ($(strip $(FIELDWORKS)),)
