--- a/src/EncCnvtrs/app.config
+++ b/src/EncCnvtrs/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="SilEncConverters40.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
 <startup><supportedRuntime version="v2.0.50727" /></startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -9,4 +14,17 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <SilEncConverters40.Properties.Settings>
+      <setting name="AzureTranslatorKey" serializeAs="String">
+        <value>18b3904a5b0641698a4149a2db81aa92</value>
+      </setting>
+      <setting name="AzureTranslatorRegion" serializeAs="String">
+        <value>global</value>
+      </setting>
+      <setting name="AzureTranslatorTextTranslationEndpoint" serializeAs="String">
+        <value>https://api.cognitive.microsofttranslator.com/</value>
+      </setting>
+    </SilEncConverters40.Properties.Settings>
+  </userSettings>
 </configuration>
