--- a/src/RunTests/RunTests 2010.csproj
+++ b/src/RunTests/RunTests 2010.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -63,7 +63,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TestEncCnvtrs\TestEncCnvtrs 2010.csproj">
       <Project>{E13305E0-0AC9-4181-A9AD-3B9B0A479087}</Project>
-      <Name>TestEncCnvtrs</Name>
+      <Name>TestEncCnvtrs 2010</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
