--- a/src/TestEncCnvtrs/TestEncCnvtrs 2010.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs 2010.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\packages\NUnit3TestAdapter.4.0.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\..\packages\NUnit3TestAdapter.4.0.0\build\net35\NUnit3TestAdapter.props')" />
   <Import Project="..\..\packages\NUnit.3.13.2\build\NUnit.props" Condition="Exists('..\..\packages\NUnit.3.13.2\build\NUnit.props')" />
@@ -118,6 +118,10 @@
     <ProjectReference Include="..\ECInterfaces\ECInterfaces 2010.csproj">
       <Project>{2935e02f-43ed-4670-9a00-a91b0ad3d66c}</Project>
       <Name>ECInterfaces 2010</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EcTranslators\EcTranslators.csproj">
+      <Project>{c4d0aa5b-f319-4e06-a982-a52e79eb57dc}</Project>
+      <Name>EcTranslators</Name>
     </ProjectReference>
     <ProjectReference Include="..\EncCnvtrs\EncCnvtrs 2010.csproj">
       <Project>{3e4b908a-4f96-43c5-981b-1aa4b73ccc26}</Project>
