see if adding assembly binding redirect for Newtonsoft.json will help the linux build

--- a/src/EcTranslators/app.config
+++ b/src/EcTranslators/app.config
@@ -1,29 +1,33 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="SilEncConverters40.EcTranslators.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
+	<configSections>
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="SilEncConverters40.EcTranslators.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
+	<userSettings>
 		<SilEncConverters40.EcTranslators.Properties.Settings>
-            <setting name="AzureTranslatorKey" serializeAs="String">
-                <value>18b3904a5b0641698a4149a2db81aa92</value>
-            </setting>
-            <setting name="AzureTranslatorRegion" serializeAs="String">
-                <value>global</value>
-            </setting>
-            <setting name="AzureTranslatorTextTranslationEndpoint" serializeAs="String">
-                <value>https://api.cognitive.microsofttranslator.com/</value>
-            </setting>
-        </SilEncConverters40.EcTranslators.Properties.Settings>
-    </userSettings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+			<setting name="AzureTranslatorKey" serializeAs="String">
+				<value>18b3904a5b0641698a4149a2db81aa92</value>
+			</setting>
+			<setting name="AzureTranslatorRegion" serializeAs="String">
+				<value>global</value>
+			</setting>
+			<setting name="AzureTranslatorTextTranslationEndpoint" serializeAs="String">
+				<value>https://api.cognitive.microsofttranslator.com/</value>
+			</setting>
+		</SilEncConverters40.EcTranslators.Properties.Settings>
+	</userSettings>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
