--- a/src/EncCnvtrs/packages.config
+++ b/src/EncCnvtrs/packages.config
@@ -7,4 +7,5 @@
   <package id="Microsoft.Web.WebView2" version="1.0.992.28" targetFramework="net48" />
   <package id="NUnit" version="3.13.2" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="4.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
 </packages>
