fix error about missing .net framework (by going back to VS 2019). "windows-latest" now resolves to VS 2022, which doesn't do it by default.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build-windows:
-    runs-on: [windows-latest]
+    runs-on: windows-2019   # [windows-latest]   # VS 2022 doesn't automatically include the proper .net framework 
     strategy:
        # Keep building other jobs even if another fails, to show what _is_ still working.
        fail-fast: false
