--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python2-dev (>=2.6) | pyth
  pkg-config,
  mono-runtime,
  mono5-sil, libgdiplus5-sil, mono5-sil-msbuild,
- icu-dev-fw | fieldworks-applications (<< 9.0.0~),
+ icu-fw, icu-dev-fw,
  wget
 Standards-Version: 3.9.6
 Homepage: https://github.com/silnrsi/encoding-converters-core
