build: fail the build if a subdirectory fails to build
- If an item early in the `for` loop fails, it continues to the next
item without failing the build (even without `|| break`, or using
`make -C $$subdir` instead of a subshell, tho it looks like `|| exit
1` would have been another way to fix it).
- Removed `for` loops and replaced with a `$(SRCDIRS)` target, which
uses `$(MAKECMDGOALS)` to pass on targets like `all`, `clean`,
`check`, or `install`.
- Some of the `for` loops had `|| true`, but in my testing today, I
haven't needed to allow some of the directories to fail when asked to
run the target.
- Added `debug` targets to sub-makefiles so the `debug` target can be
passed down.

--- a/src/ECDriver/linux/Makefile.in
+++ b/src/ECDriver/linux/Makefile.in
@@ -45,7 +45,9 @@ ifeq ($(ARCH),x86_64)
 WIDTH=_64
 endif
 
-all: $(BUILDDIR) $(OUTDIR)/libecdriver$(WIDTH).so
+all: debug
+
+debug: $(BUILDDIR) $(OUTDIR)/libecdriver$(WIDTH).so
 
 $(BUILDDIR):
 	mkdir -p $(BUILDDIR)
