--- a/Makefile.in
+++ b/Makefile.in
@@ -64,12 +64,11 @@ ifneq ($(EC_DOWNLOAD_DEPS), false)
 	cp -a packages/Geckofx60.32.Linux.60.0.49/build/Geckofx-Core.dll.config packages/Geckofx60.32.Linux.60.0.49/lib/net40
 endif
 
-debug: download_dependencies
+$(SRCDIRS):
+	$(MAKE) -C "$@" $(MAKECMDGOALS) FIELDWORKS=$(FIELDWORKS)
+
+debug: download_dependencies $(SRCDIRS)
 	cd build && ./msbuild.sh $(MONO) $(MONO_LDFLAGS) -p:SolutionDir=$(ROOTDIR)/ -p:Platform=x64 -p:FIELDWORKS=$(FIELDWORKS) -p:DefineConstants=NEED_RESOLVE_ICUBREAKITERATORENCCONVERTER
-	for subdir in $(SRCDIRS); do \
-	  echo making in $$subdir; \
-	  (cd $$subdir && $(MAKE) all FIELDWORKS=$(FIELDWORKS)) || break; \
-	done
 	mkdir -p $(OUTDIR)/EC/Plugins
 	for file in $(PLUGINS); do \
 	  cp -p redist/EC/Plugins/"$$file" $(OUTDIR)/EC/Plugins; \
@@ -81,12 +80,8 @@ debug: download_dependencies
 	cp -p src/CcEC/CcEC.dll.config $(OUTDIR)
 	cp -p src/TestEncCnvtrs/TestEncCnvtrs.dll.config $(OUTDIR)
 
-release: download_dependencies
+release: download_dependencies $(SRCDIRS)
 	cd build && ./msbuild.sh $(MONO) $(MONO_LDFLAGS) -p:SolutionDir=$(ROOTDIR)/ -p:Platform=x64 -p:config=Release -p:FIELDWORKS=$(FIELDWORKS) -p:DefineConstants=NEED_RESOLVE_ICUBREAKITERATORENCCONVERTER
-	for subdir in $(SRCDIRS); do \
-	  echo making in $$subdir; \
-	  (cd $$subdir && $(MAKE) release FIELDWORKS=$(FIELDWORKS)) || break; \
-	done
 	mkdir -p $(RELEASEOUT)/EC/Plugins
 	for file in $(PLUGINS); do \
 	  cp -p redist/EC/Plugins/"$$file" $(RELEASEOUT)/EC/Plugins; \
@@ -97,12 +92,8 @@ release: download_dependencies
 	cp -p src/CcEC/CcEC.dll.config $(RELEASEOUT)
 	cp -p src/TestEncCnvtrs/TestEncCnvtrs.dll.config $(RELEASEOUT)
 
-clean:
+clean: $(SRCDIRS)
 	cd build && ./msbuild.sh $(MONO) $(MONO_LDFLAGS) /target:clean
-	for subdir in $(SRCDIRS); do \
-	  echo making in $$subdir; \
-	  (cd $$subdir && $(MAKE) clean) || true; \
-	done
 	if [ -d $(OUTDIR) ]; then cd $(OUTDIR) && rm -f *.xml; fi
 	if [ -d $(OUTDIR) ]; then cd $(OUTDIR) && rm -rf EC; fi
 	if [ -d $(RELEASEOUT) ]; then cd $(RELEASEOUT) && rm -f *.xml; fi
@@ -110,29 +101,17 @@ clean:
 	rm -f *~
 
 # we need to keep the generated configure script and Makefile for packaging
-packageclean: clean
-	for subdir in $(SRCDIRS); do \
-	  echo making in $$subdir; \
-	  (cd $$subdir && $(MAKE) packageclean) || true; \
-	done
+packageclean: clean $(SRCDIRS)
 	rm -f src/config.h config.log
 	rm -f src/stamp-h1
 	rm -f autogen.err TestResult.xml src/TestEncCnvtrs/TestEncCnvtrs.pidb
 	rm -rf autom4te.cache output build/Obj src/TestEncCnvtrs/test-results
 	rm -rf $(OUTDIR) $(RELEASEDIR)
 
-distclean: packageclean
-	for subdir in $(SRCDIRS); do \
-	  echo making in $$subdir; \
-	  (cd $$subdir && $(MAKE) distclean) || true; \
-	done
+distclean: packageclean $(SRCDIRS)
 	rm -f Makefile configure aclocal.m4 config.cache config.status
 
-install: release
-	for subdir in $(SRCDIRS); do \
-	  echo installing in $$subdir; \
-	  (cd $$subdir && $(MAKE) install) || break; \
-	done
+install: release $(SRCDIRS)
 	mkdir -p $(DESTDIR)$(LIBDIR)/EC/Plugins
 	for file in $(DLLS); do \
 	  $(INSTALL) $(RELEASEOUT)/$$file $(DESTDIR)$(LIBDIR); \
@@ -166,7 +145,7 @@ uninstall:
 	rm -f $(DESTDIR)$(REGKEY)/values.xml
 
 NUNITROOT=`which nunit-console | sed s=/bin/nunit-console=/lib/mono=`
-check: all
+check: all $(SRCDIRS)
 	if [ ! -f $(OUTDIR)/nunit.framework.dll ]; then \
 	  echo '#' even with nunit in the GAC, we seem to need need this copying...; \
 	  find $(NUNITROOT) -name nunit.framework.dll -exec cp -p '{}' $(OUTDIR) ';' -print ; \
@@ -174,12 +153,8 @@ check: all
 	  find $(NUNITROOT) -name nunit.core.interfaces.dll -exec cp -p '{}' $(OUTDIR) ';' -print ; \
 	fi
 	cd build && LD_LIBRARY_PATH="$(OUTDIR)" ./msbuild.sh $(MONO) $(MONO_LDFLAGS) /target:test
-	for subdir in $(SRCDIRS); do \
-	  echo checking in $$subdir; \
-	  (cd $$subdir && $(MAKE) check) || break; \
-	done
 
 test:
 	cd src/ECDriver/linux && $(MAKE) test
 
-.PHONY: all debug release clean packageclean distclean install install-debug uninstall check test
+.PHONY: all debug release clean packageclean distclean install install-debug uninstall check test $(SRCDIRS)
