--- a/src/EcTranslators/app.config
+++ b/src/EcTranslators/app.config
@@ -7,16 +7,23 @@
 	</configSections>
 	<userSettings>
 		<SilEncConverters40.EcTranslators.Properties.Settings>
-			<setting name="AzureTranslatorKey" serializeAs="String">
-				<value>18b3904a5b0641698a4149a2db81aa92</value>
-			</setting>
-			<setting name="AzureTranslatorRegion" serializeAs="String">
-				<value>global</value>
-			</setting>
-			<setting name="AzureTranslatorTextTranslationEndpoint" serializeAs="String">
-				<value>https://api.cognitive.microsofttranslator.com/</value>
-			</setting>
-		</SilEncConverters40.EcTranslators.Properties.Settings>
+   <setting name="AzureTranslatorKey" serializeAs="String">
+    <value>2acbbf831c1b4417895dc80969d6a203</value>
+   </setting>
+   <setting name="AzureTranslatorRegion" serializeAs="String">
+    <value>global</value>
+   </setting>
+   <setting name="AzureTranslatorTextTranslationEndpoint" serializeAs="String">
+    <value>https://api.cognitive.microsofttranslator.com/</value>
+   </setting>
+   <setting name="AzureTranslatorKeyLocationDialogInstructionUrl"
+    serializeAs="String">
+    <value>https://docs.microsoft.com/en-us/azure/cognitive-services/translator/quickstart-translator</value>
+   </setting>
+   <setting name="AzureTranslatorKeyOverride" serializeAs="String">
+    <value />
+   </setting>
+  </SilEncConverters40.EcTranslators.Properties.Settings>
 	</userSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
