--- a/src/EcTranslators/Properties/Settings.settings
+++ b/src/EcTranslators/Properties/Settings.settings
@@ -3,13 +3,19 @@
   <Profiles />
   <Settings>
     <Setting Name="AzureTranslatorKey" Type="System.String" Scope="User">
-      <Value Profile="(Default)">18b3904a5b0641698a4149a2db81aa92</Value>
+      <Value Profile="(Default)">2acbbf831c1b4417895dc80969d6a203</Value>
     </Setting>
     <Setting Name="AzureTranslatorRegion" Type="System.String" Scope="User">
       <Value Profile="(Default)">global</Value>
     </Setting>
     <Setting Name="AzureTranslatorTextTranslationEndpoint" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://api.cognitive.microsofttranslator.com/</Value>
+    </Setting>
+    <Setting Name="AzureTranslatorKeyLocationDialogInstructionUrl" Type="System.String" Scope="User">
+      <Value Profile="(Default)">https://docs.microsoft.com/en-us/azure/cognitive-services/translator/quickstart-translator</Value>
+    </Setting>
+    <Setting Name="AzureTranslatorKeyOverride" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
