--- a/Makefile.in
+++ b/Makefile.in
@@ -59,7 +59,7 @@ endif
 download_dependencies: download_nuget
 ifneq ($(EC_DOWNLOAD_DEPS), false)
 	. ./environ && build/multitry mono build/nuget.exe restore src/EncCnvtrs/packages.config -NonInteractive -PackagesDirectory "$(ROOTDIR)/packages"
-#	. ./environ && build/multitry mono build/nuget.exe restore src/TestEncCnvtrs/packages.config -NonInteractive -PackagesDirectory "$(ROOTDIR)/packages"
+	. ./environ && build/multitry mono build/nuget.exe restore src/TestEncCnvtrs/packages.config -NonInteractive -PackagesDirectory "$(ROOTDIR)/packages"
 	cp -a packages/Geckofx60.64.Linux.60.0.51/build/Geckofx-Core.dll.config packages/Geckofx60.64.Linux.60.0.51/lib/net40
 	cp -a packages/Geckofx60.32.Linux.60.0.49/build/Geckofx-Core.dll.config packages/Geckofx60.32.Linux.60.0.49/lib/net40
 endif
