changing github action to include python2-dev and python2 in place of the now obsolete python-dev

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
         sudo apt-get update
 
     - name: Install dependencies
-      run: sudo apt-get install --assume-yes automake g++ python-dev libicu-dev mono5-sil icu-dev-fw libteckit-dev
+      run: sudo apt-get install --assume-yes automake g++ python2-dev python2 libicu-dev mono5-sil icu-dev-fw libteckit-dev
 
     - name: Checkout
       uses: actions/checkout@v2
