add settings overrides for RTL

--- a/src/BackTranslationHelper/Properties/Settings.settings
+++ b/src/BackTranslationHelper/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="MapProjectNameToTargetFontOverride" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MapProjectNameToSourceRtLOverride" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="MapProjectNameToTargetRtLOverride" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
