encrypt the translator keys and update to 0.5.3

--- a/src/EncCnvtrs/EncCnvtrs 2010.csproj
+++ b/src/EncCnvtrs/EncCnvtrs 2010.csproj
@@ -230,6 +230,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="RsaEncryptionClass.cs" />
     <Compile Include="WebBrowserGecko.cs">
       <SubType>UserControl</SubType>
     </Compile>
