keep track of the recent Bing translations, so if the user is clicking back and forth in Ptx in different verses, we don't have to repeat the call for the same input source string. (some of this change involves changes for the next commit -- redoing the changes on another machine to figure out where I went wrong on that machine)

--- a/src/BackTranslationHelper/BackTranslationHelper.csproj
+++ b/src/BackTranslationHelper/BackTranslationHelper.csproj
@@ -103,6 +103,7 @@
       <DependentUpon>BackTranslationHelperCtrl.cs</DependentUpon>
     </Compile>
     <Compile Include="BackTranslationHelperModel.cs" />
+    <Compile Include="FindReplaceHelper.cs" />
     <Compile Include="IBackTranslationHelperDataSource.cs" />
     <Compile Include="TranslatorListForm.cs">
       <SubType>Form</SubType>
