added the SpellFixer (now, FindReplaceHelper) buttons & menus. Add ability to hide the current target text box (to save real estate). Introduce the concept of IsModified so it can be used to prevent switching to another 'possible target' translation OR another verse if the user clicks in one in Ptx)

--- a/src/BackTranslationHelper/Properties/Settings.settings
+++ b/src/BackTranslationHelper/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="MapProjectNameToTargetRtLOverride" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MapProjectNameToFindReplaceProject" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
