added a persistant setting for the hide-the-pre-existing-target box and refactor the Initialize + Update to Reload

--- a/src/BackTranslationHelper/app.config
+++ b/src/BackTranslationHelper/app.config
@@ -18,6 +18,9 @@
       <setting name="HideLabels" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="HideCurrentTargetText" serializeAs="String">
+        <value>False</value>
+      </setting>
     </BackTranslationHelper.Properties.Settings>
   </userSettings>
 </configuration>
