added a button to the control to pin the Parent to TopMost

--- a/src/BackTranslationHelper/Properties/Settings.settings
+++ b/src/BackTranslationHelper/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="HideCurrentTargetText" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="PinnedToTop" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
