--- a/src/BackTranslationHelper/app.config
+++ b/src/BackTranslationHelper/app.config
@@ -21,6 +21,9 @@
       <setting name="HideCurrentTargetText" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="PinnedToTop" serializeAs="String">
+        <value>False</value>
+      </setting>
     </BackTranslationHelper.Properties.Settings>
   </userSettings>
 </configuration>
